# OpenPixelOSD

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  stm32g431cbux_flash.ld  stm32g474ceux_flash.ld  stm32g4x.cfg
.github/workflows/: build.yml
Cube/: OpenPixelOSD.ioc
USB_Device/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32/: CMakeLists.txt
doc/: OpenPixel OSD Architecture Overview - SUGGESTION.drawio  OpenPixelOSD.drawio
font_convert/: convert_mcm.py
python/: convert_logo.py  font_updater.py
src/: canvas_char.c  canvas_char.h  comp.c  dac.c  dma.c  gpio.c  main.c  main.h  msp_displayport.c  msp_displayport.h  opamp.c  pixel_draw.c  pixel_draw.h  tim.c  uart.c  uart.h  usb.c  usb.h  video_gen.c  video_gen.h  video_overlay.c  video_overlay.h
src/fonts/: font_bf_default.h  update_font.c  update_font.h
src/logo/: logo.h
src/msp/: msp.c  msp.h
src/stm32g4xx/: startup_stm32g431xx.s  startup_stm32g474xx.s  stm32g4xx_hal_conf.h  stm32g4xx_it.c  stm32g4xx_it.h  syscalls.c  system.c  system.h
